--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^4.1.1",
+    "dayjs": "^1.10.5",
     "formik": "^2.1.4",
     "isomorphic-unfetch": "^3.0.0",
     "react": "^16.13.1",
